--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Superhero landing (knee, foot, hand)</title>
+    <title>Superhero landing</title>
 </head>
+
+
 <body>
+
+
     <header class="header">
         <div class="container">
             <div class="headerlogo">
@@ -29,6 +33,8 @@
             </ul>
         </div>
     </header>
+
+
     <section class="hero">
         <div class="container">
             <div class="hero-main-text">
@@ -43,49 +49,64 @@
             </div>
         </div>
     </section>
+
+
     <section class="boxes">
-        <h1>Some random information.</h1>
         <div class="container">
-            <div class="bt">
-                <div class="box"></div>
-                <div class="boxtext">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="bt">
-                <div class="box"></div>
-                <div class="boxtext">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="bt">
-                <div class="box"></div>
-                <div class="boxtext">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="bt">
-                <div class="box"></div>
-                <div class="boxtext">this is some subtext under an illustration or image</div>
-            </div>
+            <h1>Some random information.</h1>
+            <div class="qc1">
+                <div class="bt">
+                    <div class="box"></div>
+                    <div class="boxtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="bt">
+                    <div class="box"></div>
+                    <div class="boxtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="bt">
+                    <div class="box"></div>
+                    <div class="boxtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="bt">
+                    <div class="box"></div>
+                    <div class="boxtext">this is some subtext under an illustration or image</div>
+                </div>
+            </div>            
         </div>
     </section>
+
+
     <section class="quote">
-        <div>
-            <p class="inspired">This is an inspiring quote, or a 
-                testimonial from a customer. Maybe it is just filling up space, 
-                or maybe people will actually read it. Who knows? All I
-                know is that it looks nice.
-            </p>
-            <p class="Thor">- Thor Odinson (PGDip.Th)</p>
+        <div class="container">
+            <div class="qc1">
+                <p class="inspired">This is an inspiring quote, or a 
+                    testimonial from a customer. Maybe it is just filling up space, 
+                    or maybe people will actually read it. Who knows? All I
+                    know is that it looks nice.
+                </p>
+                <p class="Thor">- Thor Odinson (PGDip.Th)</p>
+            </div>
         </div>
+
+
     </section>
     <section class="action">
         <div class="container">
-            <div>
+            <div class="ac1">
+              <div class="ac2">
                 <h2>Call to action! It's time!</h2>
                 <p>Sign up for our product by clicking that
                     button over there!</p>
+                </div>
+                <button>Sign up</button>  
             </div>
-            <button class="button2">Sign up</button>
         </div>
     </section>
+
+
     <footer class="footer">
         <p>Copyright © The Odin Project 2021</p>
+        <!-- GNU TERRY PRATCHETT -->
     </footer>
 </body>
 </html>
